--- a/docs/edge/Method calls.md.hbs
+++ b/docs/edge/Method calls.md.hbs
@@ -56,3 +56,5 @@ You can also pass the `event` object, or properties thereof (`event.original` is
   <p>current mouse position: \{{x}} x \{{y}}</p>
 </div>
 ```
+
+The `event` object is also available within body of the method call function as `this.event`. Note that methods on your Ractive instance that may handle your events are effectively part of your public API, and `this.event` will only be available during invocations triggered by an event.
