--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -77,6 +77,8 @@
 		<li>{{{createLink 'ractive.findAll()'}}}</li>
 		<li>{{{createLink 'ractive.findAllComponents()'}}}</li>
 		<li>{{{createLink 'ractive.findComponent()'}}}</li>
+		<li>{{{createLink 'ractive.findContainer()'}}}</li>
+		<li>{{{createLink 'ractive.findParent()'}}}</li>
 		<li>{{{createLink 'ractive.fire()'}}}</li>
 		<li>{{{createLink 'ractive.get()'}}}</li>
 		<li>{{{createLink 'ractive.insert()'}}}</li>
@@ -88,6 +90,7 @@
 		<li>{{{createLink 'ractive.push()'}}}</li>
 		<li>{{{createLink 'ractive.render()'}}}</li>
 		<li>{{{createLink 'ractive.reset()'}}}</li>
+		<li>{{{createLink 'ractive.resetPartial()'}}}</li>
 		<li>{{{createLink 'ractive.set()'}}}</li>
 		<li>{{{createLink 'ractive.shift()'}}}</li>
 		<li>{{{createLink 'ractive.splice()'}}}</li>
@@ -101,9 +104,12 @@
 	</ul>
 	<h2>Instance properties</h2>
 	<ul>
+		<li>{{{createLink 'ractive.container'}}}</li>
 		<li>{{{createLink 'ractive.nodes'}}}</li>
 		<li>{{{createLink 'ractive.transitions (instance)' 'ractive.transitions'}}}</li>
+		<li>{{{createLink 'ractive.parent'}}}</li>
 		<li>{{{createLink 'ractive.partials (instance)' 'ractive.partials'}}}</li>
+		<li>{{{createLink 'ractive.root'}}}</li>
 	</ul>
 	<h2>Static methods</h2>
 	<ul>
