--- a/docs/edge/Two-way binding.md.hbs
+++ b/docs/edge/Two-way binding.md.hbs
@@ -5,6 +5,8 @@ By default, a Ractive instance will update its internal model based on user inpu
 
 If that's unhelpful for your app, you can disable it by passing `twoway: false` as an {{{createLink 'options' 'initialisation option'}}}.
 
+Two-way vinding can also be overridden on a per-element basis using the `twoway` directive e.g. `<input value="\{{foo}}" twoway="false">`. If the `twoway` option is set to false, it can be overridden on a per-element bases using `twoway` as a boolean attribute e.g. `<input value="\{{foo}}" twoway>` or `<input value="\{{foo}}" twoway="true">`.
+
 
 ## `<input>` elements
 
@@ -163,7 +165,9 @@ You have two options - either use a {{{createLink 'mustaches' 'restricted refere
 
 ## Lazy updates
 
-Under the hood, Ractive always binds to the `change` event (and the `click` event in IE, in the case of checkboxes, due to an IE bug). By default, it will also bind to the `input` event, which means the model is updated instantly when the user enters data (the `change` event fires when a change is ['committed by the user'](https://developer.mozilla.org/en-US/docs/Web/Reference/Events/change)). In some situations, that's not what you want - if you want to only bind to `change`, pass in `lazy: true` as an {{{createLink 'options' 'initialisation option' 'twoway'}}}.
+Under the hood, Ractive always binds to the `change` event (and the `click` event in IE, in the case of checkboxes, due to an IE bug). By default, it will also bind to the `input` event, which means the model is updated instantly when the user enters data (the `change` event fires when a change is ['committed by the user'](https://developer.mozilla.org/en-US/docs/Web/Reference/Events/change)). In some situations, that's not what you want - if you want to only bind to `change`, pass in `lazy: true` as an {{{createLink 'options' 'initialisation option' 'lazy'}}}.
+
+As with `twoway`, laziness may be specified on a per-element basis. Besides `true` (or simply having the attribute preset) and `false` values, the `lazy` directive may also be a number that specifies the number of milliseconds to wait after the last `input` event fires with subsequent `input` events resetting the timeout. For instance `<input value="\{{foo}}" lazy>` will trigger updates to `foo` on `change` and `<input value="\{{foo}}" lazy="1000">` will trigger updates 1 second after the last keypress.
 
 ## Observing changes
 
