--- a/docs/0.6/Ractive.defaults.md.hbs
+++ b/docs/0.6/Ractive.defaults.md.hbs
@@ -3,7 +3,7 @@ title: Ractive.defaults
 section: APIReference
 ---
 
-Most of the {{{createLink 'Initialisation options' 'initialisation options'}}} can be assigned
+Most of the {{{createLink 'Initialisation options' 'options'}}} can be assigned
 to the `Ractive.defaults` property and will be used as a default option on any future created instances.
 If the same option is supplied during initialisation, it will override the default:
 
