--- a/docs/edge/ractive.observe().md.hbs
+++ b/docs/edge/ractive.observe().md.hbs
@@ -29,7 +29,7 @@ See {{{createLink 'Observers'}}} for more detail.
 > > #### **keypath** *`String`*
 > > The [keypath](keypaths) to observe, or a group of space-separated keypaths. Any of the keys can be a `*` character, which is treated as a wildcard.
 > > #### **callback** *`Function`*
-> > The function that will be called, with `newValue`, `oldValue` and `keypath` as arguments (see {{{createLink 'Observers'}}} for more nuance regarding these arguments), whenever the observed keypath changes value. By default the function will be called with `ractive` as `this`
+> > The function that will be called, with `newValue`, `oldValue` and `keypath` as arguments (see {{{createLink 'Observers'}}} for more nuance regarding these arguments), whenever the observed keypath changes value. By default the function will be called with `ractive` as `this`. Any wildcards in the keypath will have their matches passed to the callback at the end of the arguments list as well.
 > > #### options *`Object`*
 > > > #### init *`Boolean`*
 > > > Defaults to `true`. Whether or not to initialise the observer, i.e. call the function with the current value of `keypath` as the first argument and `undefined` as the second
