--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -84,8 +84,10 @@
 		<li>{{{createLink 'ractive.insert()'}}}</li>
 		<li>{{{createLink 'ractive.merge()'}}}</li>
 		<li>{{{createLink 'ractive.observe()'}}}</li>
+		<li>{{{createLink 'ractive.observeOnce()'}}}</li>
 		<li>{{{createLink 'ractive.off()'}}}</li>
 		<li>{{{createLink 'ractive.on()'}}}</li>
+		<li>{{{createLink 'ractive.once()'}}}</li>
 		<li>{{{createLink 'ractive.pop()'}}}</li>
 		<li>{{{createLink 'ractive.push()'}}}</li>
 		<li>{{{createLink 'ractive.render()'}}}</li>
