--- a/docs/edge/ractive.on().md.hbs
+++ b/docs/edge/ractive.on().md.hbs
@@ -1,7 +1,7 @@
 ---
 title: ractive.on()
 ---
-Subscribe to {{{createLink 'events overview'}}}.
+Subscribe to {{{createLink 'events overview' 'events'}}}.
 
 > ### ractive.on( eventName, handler )
 > Returns an `Object` with a `cancel` method, which removes the handler.
