--- a/docs/edge/ractive.once().md.hbs
+++ b/docs/edge/ractive.once().md.hbs
@@ -1,7 +1,7 @@
 ---
 title: ractive.once()
 ---
-Subscribe to an event for a single firing. This is a convenience function on top of {{{createLink 'ractive.once()}}}.
+Subscribe to an event for a single firing. This is a convenience function on top of {{{createLink 'ractive.on()'}}}.
 
 > ### ractive.once( eventName, handler )
 > Returns an `Object` with a `cancel` method, which removes the handler.
