add sparse docs for unrender in 0.6 and edge and add initial docs for getNodeInfo in edge

--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -100,6 +100,7 @@
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.unrender()'}}}</li>
 		<li>{{{createLink 'ractive.unshift()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
 		<li>{{{createLink 'ractive.updateModel()'}}}</li>
@@ -115,8 +116,9 @@
 	</ul>
 	<h2>Static methods</h2>
 	<ul>
-		<li>{{{createLink 'Ractive.parse()'}}}</li>
 		<li>{{{createLink 'Ractive.extend()'}}}</li>
+		<li>{{{createLink 'Ractive.getNodeInfo()'}}}</li>
+		<li>{{{createLink 'Ractive.parse()'}}}</li>
 	</ul>
 	<h2>Static properties</h2>
 	<ul>
