--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -95,6 +95,7 @@
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.unrender()'}}}</li>
 		<li>{{{createLink 'ractive.unshift()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
 		<li>{{{createLink 'ractive.updateModel()'}}}</li>
@@ -107,8 +108,8 @@
 	</ul>
 	<h2>Static methods</h2>
 	<ul>
-		<li>{{{createLink 'Ractive.parse()'}}}</li>
 		<li>{{{createLink 'Ractive.extend()'}}}</li>
+		<li>{{{createLink 'Ractive.parse()'}}}</li>
 	</ul>
 	<h2>Static properties</h2>
 	<ul>
