--- a/docs/edge/Plugins.md.hbs
+++ b/docs/edge/Plugins.md.hbs
@@ -21,6 +21,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
 * [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
+* [Chosen](http://kalcifer.github.io/ractive-decorators-chosen/) - contributed by [@rahulcs](https://github.com/rahulcs) ([@kalcifer](https://github.com/kalcifer))
 * [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
 
 
