--- a/docs/edge/Templates.md.hbs
+++ b/docs/edge/Templates.md.hbs
@@ -24,5 +24,5 @@ Elements in a Ractive template can have {{{createLink 'events' 'proxy events' 'p
 Another item in the set of things-that-look-like-attributes-but-aren't, {{{createLink 'transitions'}}} allow you to specify how elements should behave when they first get introduced to the DOM and when they get removed from it later:
 
 ```html
-<div intro='fadeIn'>This element will fade in gradually when it renders</div>
+<div intro='fade'>This element will fade in gradually when it renders</div>
 ```
