--- a/docs/0.6/Partials.md.hbs
+++ b/docs/0.6/Partials.md.hbs
@@ -103,7 +103,7 @@ In this case, the `thumbnail` partial won't be globally available - it will only
 
 
 <a name="expressions"></a>
-## Parial expressions
+## Partial expressions
 
 Partial references may be a name that already exists as a partial, or they may also be any expression that resolves to a partial name. This can be used to select an appropriate partial based on the current context and more. The full power of Ractive's {{{createLink 'expressions'}}} are available. If the value of the expression changes, the partial fragment will be re-rendered using the new partial.
 
