Add simple example of conditional section
So I can avoid wasting Rich's time in future..

--- a/docs/0.6/Expressions.md.hbs
+++ b/docs/0.6/Expressions.md.hbs
@@ -23,6 +23,14 @@ Or it could mean adding a class based on some condition:
 <a class='button \{{ active ? "on" : "off" }}'>switch</a>
 ```
 
+Or a whole section based on some condition:
+
+```html
+\{{#if (country === 'GB')}}
+   <p>To whom it may concern...</p>  
+\{{/if}}
+```
+
 Or it could mean filtering a list to exclude certain records:
 
 ```html
