--- a/docs/0.6/Plugins.md.hbs
+++ b/docs/0.6/Plugins.md.hbs
@@ -8,40 +8,41 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 ## {{{createLink 'Adaptors'}}}
 
 * [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
+* [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
+* [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
 * [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
 * [Promise-alt](https://github.com/rstacruz/ractive-promise-alt) - contributed by [@rstacruz](https://github.com/rstacruz)
-* [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
-* [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
 * [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
 * [Ractive](https://github.com/rstacruz/ractive-ractive) (synchronise several Ractive instances) - contributed by [@rstacruz](https://github.com/rstacruz)
-* TODO Object.observe
+* [ss-ractive](https://github.com/arxpoetica/ss-ractive) (Ractive Template Engine wrapper for [SocketStream](https://github.com/socketstream/socketstream)) - by Robert Hall [@arxpoetica](https://github.com/arxpoetica)
+* TODO: Object.observe
 
 
 ## {{{createLink 'Decorators'}}}
 
-* [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
-* [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
 * [Chosen](http://kalcifer.github.io/ractive-decorators-chosen/) - contributed by [@rahulcs](https://github.com/rahulcs) ([@kalcifer](https://github.com/kalcifer))
 * [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
+* [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
+* [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
 
 
 ## {{{createLink 'Events'}}}
 
-* [Tap](http://ractivejs.github.io/ractive-events-tap)
-* [Hover](http://ractivejs.github.io/ractive-events-hover)
-* [Mousewheel](http://ractivejs.github.io/Ractive-events-mousewheel)
-* [Keys](http://ractivejs.github.io/ractive-events-keys)
 * [Drag and Drop](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 * [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
-* [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)
+* [Hover](http://ractivejs.github.io/ractive-events-hover)
+* [Keys](http://ractivejs.github.io/ractive-events-keys)
+* [Mousewheel](http://ractivejs.github.io/Ractive-events-mousewheel)
+* [Tap](http://ractivejs.github.io/ractive-events-tap)
 * [Touch](https://github.com/rstacruz/ractive-touch) - contributed by [@rstacruz](https://github.com/rstacruz/)
 * [Typing](https://github.com/svapreddy/ractive-events-typing) - contributed by [@svapreddy](https://github.com/svapreddy)
+* [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)
 
 
 ## {{{createLink 'Transitions'}}}
 
 * [Fade](http://ractivejs.github.io/ractive-transitions-fade)
-* [Slide](http://ractivejs.github.io/ractive-transitions-slide)
 * [Fly](http://ractivejs.github.io/ractive-transitions-fly)
-* [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
 * [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
+* [Slide](http://ractivejs.github.io/ractive-transitions-slide)
+* [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
