Add a note about HTML comments (ractivejs/ractive#1675)

--- a/docs/0.6/Mustaches.md.hbs
+++ b/docs/0.6/Mustaches.md.hbs
@@ -237,6 +237,7 @@ Will render as follows:
 <h1>Today.</h1>
 ```
 
+If you'd like the comments to show up, just use html comments and set {{{createLink 'options' 'stripComments' 'stripComments'}}} to `false`.
 Comments may contain newlines.
 
 <a name="partials"></a>
