--- a/docs/0.6/Components.md.hbs
+++ b/docs/0.6/Components.md.hbs
@@ -62,7 +62,7 @@ var ractive = new Ractive({
 
 <script id="component" type="text/ractive">
 
-  \{{nonIsolatedString}}
+  \{{nonIsolatedSetting}}
 
 </script>
 
