--- a/docs/0.6/Options.md.hbs
+++ b/docs/0.6/Options.md.hbs
@@ -69,7 +69,7 @@ ractive.myMethod(); // triggers the alert
 ## Templating
 
 > <a id="template"></a>
-> ### **template** *`String` or (if {{{createLink 'preparsing'}}}) `Array` or `Object`*
+> ### **template** *`String` or `Function` or (if {{{createLink 'preparsing'}}}) `Array` or `Object`*
 > The template to use. If this is a string, it must be valid (if meaningless, until rendered) HTML:
 > ```js
 > template: '<p>\{{greeting}} world!</p>',
@@ -86,7 +86,9 @@ ractive.myMethod(); // triggers the alert
 > ```
 > See the [60 second setup](http://ractivejs.org/60-second-setup) for an example of this.
 
-> Make sure to set `type='text/ractive'` on the `<script>` tag or the browser will try and execute the contents as javascript and you'll get an exception.
+> Make sure to set `type='text/ractive'` on the `<script>` tag or the browser will try and execute the contents as javascript and you'll get an exception. Some text editors will highlight `type='text/html'` as HTML, which can be useful and the browser will still ignore it for execution.
+
+> If a function, the result of the function can be a string or a pre-parsed template.
 
 > <a id="partials"></a>
 > ### partials *`Object`*
@@ -213,7 +215,7 @@ ractive.myMethod(); // triggers the alert
 ## Data & Binding
 
 > <a id="data"></a>
-> ### data *`Object` or `Array` or `String`*
+> ### data *`Object` or `Array` or `Function`*
 > The data with which to initialise.
 > ```js
 > // object
@@ -222,8 +224,10 @@ ractive.myMethod(); // triggers the alert
 > // array
 > data: [ 'red', 'blue', 'yellow' ]
 >
-> // string
-> data: 'foo'
+> // function
+> data: function() {
+>   return { foo: 'bar' };
+> }
 > ```
 
 > <a id="computed"></a>
