--- a/docs/0.6/Components.md.hbs
+++ b/docs/0.6/Components.md.hbs
@@ -5,7 +5,7 @@ In many situations, you want to encapsulate behaviour and markup into a single r
 
 First, you need to **create the component** with {{{createLink 'Ractive.extend()'}}}, which allows you to define a template, initialisation behaviour, default data, and so on. (If you're not familiar with Ractive.extend() you should read that page first.)
 
-* [Initiliasation Options](#init)
+* [Initialisation Options](#init)
 * [Binding](#binding)
 * [Events](#events)
 * [The \{{>content}} Directive](#content)
