--- a/docs/0.6/Options.md.hbs
+++ b/docs/0.6/Options.md.hbs
@@ -215,17 +215,14 @@ ractive.myMethod(); // triggers the alert
 ## Data & Binding
 
 > <a id="data"></a>
-> ### data *`Object` or `Array` or `Function`*
+> ### data *`Object` or `Function`*
 > The data with which to initialise.
 > ```js
 > // object
 > data: { foo: 'bar' }
 >
-> // array
-> data: [ 'red', 'blue', 'yellow' ]
->
-> // function
-> data: function() {
+> // function (with Ractive.extend(), ensures instances cannot mutate class data)
+> data: function () {
 >   return { foo: 'bar' };
 > }
 > ```
