copy latest changes to edge for options and plugins

--- a/docs/edge/Options.md.hbs
+++ b/docs/edge/Options.md.hbs
@@ -215,14 +215,11 @@ ractive.myMethod(); // triggers the alert
 ## Data & Binding
 
 > <a id="data"></a>
-> ### data *`Object` or `Array` or `Function`*
+> ### data *`Object` or `Function`*
 > The data with which to initialise.
 > ```js
 > // object
 > data: { foo: 'bar' }
->
-> // array
-> data: [ 'red', 'blue', 'yellow' ]
 >
 > // function
 > data: function() {
