--- a/docs/edge/Mustaches.md.hbs
+++ b/docs/edge/Mustaches.md.hbs
@@ -24,6 +24,7 @@ If you've used [Handlebars](http://handlebarsjs.com) or [Angular](http://angular
   * [Handlebars-style sections](#handlebars)
   * [Aliasing](#aliasing)
   * [Static mustaches](#static)
+  * [`\{{else}}` and `\{{elseif}}`](#else)
   * [Escaping Mustaches](#escaping)
 
 
@@ -113,6 +114,7 @@ Output:
 ```html
 Shown.
 ```
+
 #### Non-Empty Lists
 
 If the person key exists and has a non-false value, the HTML between the pound and slash will be rendered and displayed one or more times.
@@ -188,30 +190,6 @@ Template:
 \{{^repo}}
   No repos :(
 \{{/repo}}
-```
-
-Ractive borrows a trick from Handlebars here and lets you perform:
-
-```html
-\{{#repo}}
-  <b>{{name}}</b>
-\{{else}}
-  No repos :(
-\{{/repo}}
-```
-
-Data:
-
-```javascript
-{
-  "repo": []
-}
-```
-
-Output:
-
-```html
-No repos :(
 ```
 
 #### Attributes
@@ -599,6 +577,49 @@ Output:
 ```
 Hello, normal user
 ```
+
+
+<a name="else"></a>
+### \{{else}} and \{{elseif}}
+Ractive borrows a trick from Handlebars here and lets you perform:
+
+```html
+\{{#repo}}
+  <b>{{name}}</b>
+\{{else}}
+  No repos :(
+\{{/repo}}
+```
+
+Data:
+
+```javascript
+{
+  "repo": []
+}
+```
+
+Output:
+
+```html
+No repos :(
+```
+
+Ractive takes it a step further and also allows you to use `\{{elseif otherCondition}}` for alternate cases.
+
+```html
+\{{#if foo}}
+  foo
+\{{elseif bar}}
+  bar but not foo
+\{{else}}
+  neither foo nor bar
+\{{/if}}
+```
+
+In this case, the output would be what you would expect. If `foo` is true, then the output will be `foo`. If `foo` is false and `bar` is true, the the output will be `bar but not foo`. If neither `foo` nor `bar` is true, the the output will be `neither foo nor bar`.
+
+Further, `\{{else}}` and `\{{elseif}}` clauses can be used with `\{{#with}}` and `\{{#each}}` sections too. If the context for the `\{{#with}}` section doesn't exist, then any else clauses will be processed as if the entire section were a conditional with a false first branch. If the array for the `\{{#each}}` (or regular iterative section) is empty, then any else clauses will be processed as if the entire section were a conditional with a false first branch.
 
 
 <a name="escaping"></a>
