--- a/docs/edge/Publish-subscribe.md.hbs
+++ b/docs/edge/Publish-subscribe.md.hbs
@@ -65,7 +65,7 @@ In addition to the event argument that is passed with proxy events, the event ob
 Properties on all `this.event` objects:
 
 * `this.event.name` - the name of the event
-* `this.event.context` - the value of `this.get(event.keypath)` or `ractive.data` for non-proxy events
+* `this.event.context` - the value of `this.get(event.keypath)` or `ractive.get()` for non-proxy events
 * `this.event.component` - the component that raised the event, only present on {{{createLink 'event bubbling' 'bubbled events'}}}
 * `this.event.original` - the original DOM event, if available
 
