--- a/docs/edge/new Ractive({...}).md.hbs
+++ b/docs/edge/new Ractive({...}).md.hbs
@@ -17,7 +17,7 @@ var ractive = new Ractive({
 	el: '#container',
 	template: '#template',
 	data: data
-})
+});
 ```
 
 The full list of initialisation options is {{{createLink 'Options' 'covered here'}}}.
@@ -29,7 +29,7 @@ Ractive offers an {{{createLink 'Ractive.extend()' 'extend'}}} method for standa
 ```js
 var MyRactive = Ractive.extend({
 	template: '#mytemplate'
-})
+});
 ```
 The same {{{createLink 'Options' 'initialisation options'}}} can be supplied to the extend method, plus some additional options.
 
@@ -39,7 +39,19 @@ These are instantiated in exactly the same way as above, supplying any additiona
 var ractive = new MyRactive({
 	el: '#container',
 	data: data
-})
+});
 ```
 
 See {{{createLink 'Ractive.extend()' }}} for more details.
+
+## Initialisation without `new`
+
+You can also create a new Ractive instance by calling Ractive as a function. It will handle creating a new object and return it from the call.
+
+```js
+var ractive = Ractive({
+	el: '#container',
+	template: '#template',
+	data: data
+});
+```
