get() now includes mappings in a shallow copy

--- a/docs/edge/ractive.get().md.hbs
+++ b/docs/edge/ractive.get().md.hbs
@@ -5,4 +5,4 @@ title: ractive.get()
 > Returns the value at `keypath` (see {{{createLink 'Keypaths'}}})
 
 > ### ractive.get()
-> Returns all data (the equivalent of `ractive.data`). This does not include {{{createLink 'computed properties' 'Computed Properties' }}}
+> Returns a shallow copy of all data (the equivalent of `ractive.get('')`). This does not include {{{createLink 'computed properties' 'Computed Properties' }}}, but it does include any mappings if `ractive` happens to be a component instance with mappings.
