add a note that toggle now works with patterns

--- a/docs/edge/ractive.toggle().md.hbs
+++ b/docs/edge/ractive.toggle().md.hbs
@@ -8,4 +8,4 @@ Toggles the selected {{{createLink 'keypaths' 'keypath'}}}. In other words, if `
 > Returns a `Promise` (see {{{createLink 'Promises'}}})
 
 > > #### **keypath** *`String`*
-> > The {{{createLink 'keypaths' 'keypath'}}} to toggle the value of
+> > The {{{createLink 'keypaths' 'keypath'}}} to toggle the value of. If **keypath** is a pattern, then all matching keypaths will be toggled.
