--- a/docs/edge/Mustaches.md.hbs
+++ b/docs/edge/Mustaches.md.hbs
@@ -400,7 +400,7 @@ There are a few implicit variables that are available anywhere within a ractive 
   ```html
   \{{#items}}\{{@index + 1}} - \{{.}}\{{/}}
   ```
-* `@key` is an alias for `@index`, though at some point in the future Ractive may further differentiate between array and object iteration.
+* `@key` is a reference to the current key in the nearest object iterator section.
 * `@keypath` is the current context used to resolve references.
   ```html
   \{{#foo}}\{{#bar}}\{{@keypath}} - foo.bar\{{/}}\{{/}}
@@ -434,7 +434,7 @@ Mustache fans may bristle at expressions - after all, the whole point is that mu
 <a name="handlebars"></a>
 ### Handlebars-style sections
 
-In addition to Mustache-style conditional and iterative sections, Ractive adds Handlebars-style ```if```, ```unless```, ```each```, and ```with``` to handle branching, iteration, and context control. For ```if``` and ```each```, ```\{{else}}``` may be used to provide an alternate branch for a false condition or an empty iterable.
+In addition to Mustache-style conditional and iterative sections, Ractive adds Handlebars-style ```if```, ```unless```, ```each```, and ```with``` to handle branching, iteration, and context control. For ```if```, ```with```, and ```each```, <a href="#else">```\{{elseif}}``` and ```\{{else}}```</a> may be used to provide alternate branches for false conditions, missing contexts, or empty iterables.
 
 ```html
 <button on-click="flip">Flip Coin</button>
