note that elseif is now reserved in migration docs for 0.7

--- a/docs/edge/Migrating.md.hbs
+++ b/docs/edge/Migrating.md.hbs
@@ -37,6 +37,7 @@ Ractive.DEBUG = /unminified/.test(function(){/*unminified*/});
 
 * `twoway` and `lazy` are now reserved attribute names to be used as binding directives.
 * Inline partials now belong to their nearest component instance.
+* `elseif` is now a reserved identifier.
 * `ractive.data` is no longer available. Use `ractive.get()` to get a shallow copy of the data with any component mappings.
 * Child data always overrides parent data, whether it is a POJO or not.
 
