should be migrating to 0.7.x

--- a/docs/0.7/Migrating.md.hbs
+++ b/docs/0.7/Migrating.md.hbs
@@ -1,5 +1,5 @@
 ---
-title: 'Migrating to Edge'
+title: 'Migrating to 0.7.x'
 ---
 
 These migration notes are cribbed from the [CHANGELOG](https://github.com/ractivejs/ractive/blob/dev/CHANGELOG.md). While we strive to minimise breaking changes, and to highlight the ones we do introduce, if you discover an undocumented breaking change please edit this page.
